fix mis-alignments

--- a/dd-wrt-forum-inspired-themes.user.styl
+++ b/dd-wrt-forum-inspired-themes.user.styl
@@ -2093,8 +2093,8 @@ b() { box-shadow: arguments }
     // z-index ensure this displays ontop of the input boxes below.
     #quick_links {
       position: absolute
-      top: 160px
-      left: 890px
+      top: 209px
+      left: 893px
       z-index: 1
       #quick_link_infos {
         border-left: 1px solid v04
@@ -2195,7 +2195,7 @@ b() { box-shadow: arguments }
   .forum {
     #header {
       background: bg0
-      height: 149px
+      height: 199px
       #header_ads {
         //fix privacy policy/inprint align on scroll
         display: none
@@ -3109,8 +3109,8 @@ b() { box-shadow: arguments }
     }
     // bottom add attach by submit/preview buttons
     &[type='submit'].liteoption[name='add_attachment'] {
-      margin-top: calc(5.5% + .5rem)
-      left: calc(50% - 26.4%)
+      margin-top: calc(-3.3% + .5rem)
+      left: calc(66.5% - 26.4%)
       position: absolute
       box-shadow: 0 1px 0 bg0
       text-shadow: 0 1px 0 bg0
